# WinCast

./: .gitignore  README.md  pyproject.toml  requirements.txt  todo.txt
app/: config.py  database.py  main.py
app/models/: event.py  prediction.py  user.py  winner.py
app/routers/: admin.py  auth.py  draw.py  events.py  leaderboard.py  predictions.py
app/schemas/: event.py  prediction.py  user.py  winner.py
app/services/: evaluation.py  winner.py
app/utils/: deps.py  security.py
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: EventCard.tsx  EventList.tsx  Header.tsx  MyEventList.tsx  PageWrapper.tsx  ResultsList.tsx  Sidebar.tsx  Toast.tsx
frontend/src/pages/: EventDetailsPage.tsx  LandingPage.tsx  ProfilePage.tsx  SignInPage.tsx  SignUpPage.tsx
frontend/src/services/: api.ts
frontend/src/utils/: formatDate.ts
